# timespace-colav

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
colav/: __init__.py  colav.py  planner.py
colav/colregs/: __init__.py  encounters.py
colav/obstacle/: __init__.py  obstacle.py
colav/obstacles/: __init__.py  moving.py  obstacle.py  shapes.py  static.py  transform.py
colav/path/: __init__.py  edge_filter.py  filters.py  graph.py  planning.py  pwl.py
colav/scenarios/: __init__.py  env.py  runner.py
colav/timespace/: __init__.py  constraints.py  plane.py  projection.py  projector.py
colav/utils/: __init__.py  math.py  mmsi.py
examples/: filters.py  interactive_encounter.py  test_timespace_colav.py  tutorial.ipynb
examples/notebooks/: tutorial.ipynb
examples/scripts/: filters.py  interactive_encounter.py  scenarios_runner.py  test_timespace_colav.py
timespace/: plane.py
