[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timespace-colav"
version = "0.1.0"
description = "Time-space collision avoidance library"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]