[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timespace-colav"
version = "0.1.0"
description = "Timespace collision avoidance library"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0", 
    "matplotlib>=3.5.0",
    "shapely>=2.0.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]